fix recommendations task